Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8498

configuration from log 'nodemap' failed (-22)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.9.0
    • None
    • 1
    • 9223372036854775807

      In current master 2.8.56, a newly created file system failed at mounting OST due to nodemap log error.

      From the log message:

      00000100:00000001:3.0:1470938259.243549:0:9524:0:(client.c:1052:ptlrpc_set_destroy()) Process leaving
      00000100:00000001:3.0:1470938259.243549:0:9524:0:(client.c:2896:ptlrpc_queue_wait()) Process leaving (rc=0 : 0 : 0)
      10000000:00000001:3.0:1470938259.243551:0:9524:0:(mgc_request.c:1716:mgc_process_recover_nodemap_log()) Process leaving via out (rc=18446744073709551594 : -22 : 0xffffffffffffffea)
      

      it looks like the corresponding log has a zero size that triggered this error.

              if (ealen == 0) { /* no logs transferred */
      #ifdef HAVE_SERVER_SUPPORT
                      /* config changed since first read RPC */
                      if (cld_is_nodemap(cld) && config_read_offset == 0) {
                              recent_nodemap = NULL;
                              nodemap_config_dealloc(new_config);
                              new_config = NULL;
      
                              CDEBUG(D_INFO, "nodemap config changed in transit, retrying\n");
      
                              /* setting eof to false, we request config again */
                              eof = false;
                              GOTO(out, rc = 0);
                      }
      #endif
                      if (!eof)
                              rc = -EINVAL;
                      GOTO(out, rc);
              }
      

      We have a debug log and will attach it soon.

        1. log_failedmount_vanilla_master
          0.2 kB
        2. log.Jinshan
          0.2 kB
        3. log.mds.LU-8498
          0.2 kB
        4. mds_lctl_log_afterpatch
          0.2 kB
        5. oss_lctl_log.afterpatch
          0.2 kB

            kit.westneat Kit Westneat (Inactive)
            jay Jinshan Xiong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: